# lambda-frame-sample

./: .gitignore  README.md  script.cabal  stack.yaml
data/: components.tsx  dir.tsx
src/: Test1.hs  Test1.tmx
