name:                script
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/masatoko/lambda-frame-sample#readme
license:             BSD3
author:              Masato Kobayashi
maintainer:          masatokodo@gmail.com
copyright:           2018 Masato Kobayashi
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:
      lambda-frame-script
    , base >= 4.7 && < 5
    , linear
    , mtl
    , extra
    , binary
    , containers
    , bytestring
